--- a/SecProj/package.json
+++ b/SecProj/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "dev": "npx nodemon -w src --exec \"babel-node src --presets @babel/preset-env\" ",
+    "build": "npx babel src -s -D -d dist --presets @babel/preset-env",
+    "prestart": "npm run -s build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx babel-node ./app.js"
+    "start": "pm2 start dist",
+    "br": "npx babel-node ./app.js"
   },
   "babel": {
     "presets": [
@@ -16,10 +20,15 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.5.5",
-    "@babel/preset-env": "^7.5.5"
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-stage-0": "^7.0.0",
+    "nodemon": "^1.19.1"
   },
   "dependencies": {
     "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5"
+    "@babel/node": "^7.5.5",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.6.8"
   }
 }
