--- a/SecProj/package.json
+++ b/SecProj/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "npx nodemon -w src --exec \"babel-node src --presets @babel/preset-env\" ",
+    "dev": "npx nodemon --watch ./src --exec \"npx babel-node ./src/app.js --presets @babel/preset-env\" ",
     "build": "npx babel src -s -D -d dist --presets @babel/preset-env",
     "prestart": "npm run -s build",
     "test": "echo \"Error: no test specified\" && exit 1",
